--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,5 +1,8 @@
 // Abstracts
-@import "abstracts/variables";
+@import "abstracts";
 
 // Vendors
-@import "vendors/bulma";
+@import "vendors";
+
+// Base
+@import "base";
