--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -2,3 +2,7 @@
 $color-primary: #2d3051;
 $color-secondary: red;
 $color-orange: #ff8606;
+
+// Fonts
+$font-family-roboto-condensed: 'Roboto Condensed', sans-serif;
+$font-family-caveat-brush: 'Caveat Brush', cursive;;
