refactor: remove typography variables

--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 .font-caveat-brush {
-  font-family: $font-family-caveat-brush;
+  font-family: 'Caveat Brush', cursive;
 }
 
 .font-roboto-condensed {
-  font-family: $font-family-roboto-condensed;
+  font-family: 'Roboto Condensed', sans-serif;
 }
